# ebay-sdk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  sop.json
.claude/hooks/loggers/: log-event.sh
.claude/hooks/validators/: no-main-commit.sh
docs/: architecture.html  index.html  roadmap.html  specs.md  user-story.html
src/ebay_sdk/: __init__.py  client.py
src/ebay_sdk/buy/: __init__.py  browse.py
src/ebay_sdk/commerce/: __init__.py  taxonomy.py
src/ebay_sdk/sell/: __init__.py  account.py  feed.py  finances.py  fulfillment.py  inventory.py  marketing.py
tests/: conftest.py  test_buy_browse.py  test_commerce_taxonomy.py  test_sell_account.py  test_sell_feed.py  test_sell_finances.py  test_sell_fulfillment.py  test_sell_inventory.py  test_sell_marketing.py
